prompt playground: added more info

--- a/concepts/prompt-playground/overview.mdx
+++ b/concepts/prompt-playground/overview.mdx
@@ -28,10 +28,11 @@ This documentation will guide you through the various functionalities of the Pro
     Learn how to leverage template and variables to speed up your dev/debug
     cycle.
   </Card>
-  <Card title="Formatted Prompt" icon="message-lines" color="#16a34a">
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco
+  <Card title="Formatted Prompt" icon="message-lines" color="#16a34a" href="/concepts/prompt-playground/formatted-prompts">
+    Learn how to do a lighter integration while still speeding up your dev/debug
+    cycle.
   </Card>
-  <Card title="LLM Providers" icon="microchip-ai" color="#dc2626">
-    Excepteur sint occaecat cupidatat non proident
+  <Card title="LLM Providers" icon="microchip-ai" color="#dc2626" href="/concepts/prompt-playground/llm-providers">
+    Learn how to integrate with any LLM provider
   </Card>
 </CardGroup>
