prompt playground: iterated based on feedback

--- a/concepts/prompt-playground/formatted-prompts.mdx
+++ b/concepts/prompt-playground/formatted-prompts.mdx
@@ -2,13 +2,32 @@
 title: Formatted Prompts
 ---
 
-Formatted Prompts are another option to define Prompt without defining the template and variables used.
+The formatted prompts view allows you to preview the full text that is sent to the LLM for completion.
 
-This enables an easier integration, although the debugging interface will offer less features (no variable management or template view).
+There are two ways formatted prompts can be displayed:
+
+1. Read-only: when you configure your prompt with a template and variables
+2. Read-write: when you configure your prompt directly with the formatted prompt
+
+## Read-only
+
+When you configure your prompt with a template and variables, the "formatted prompts" view enables you to preview the rendered template. It makes it easy to see the exact text sent to the LLM.
+
+Like in the "Template" view, you can click on the variables to edit them.
+
+This view doesn't let you edit the formatted prompt, as it is only the combination of the template and variables.
+
+When you need to edit the prompt template, go back to the "Template" view.
+
+## Read-write
+
+When you configure your prompt with only a formatted string, the "Template" view is hidden, only the "Formatted prompt" view is available.
+
+Skipping the definition of a template and its variables makes it easier to integrate, although the debugging interface will offer less features (no variable management or template view).
 
 ![Formatted Prompt](/images/prompt-playground-formatted-prompt.png)
 
-Here is an example of code used with a formatted prompt:
+Here is an example of code without the template/variables definitions:
 
 ```python
 import openai
@@ -51,3 +70,5 @@ async def start():
         prompt=prompt,
     ).send()
 ```
+
+In this case, the "Formatted prompt" view can be edited directly.
