--- a/concepts/prompt-playground/llm-providers.mdx
+++ b/concepts/prompt-playground/llm-providers.mdx
@@ -14,7 +14,7 @@ There are three providers for OpenAI:
 - `ChatOpenAI`: supports the gpt-3.5 and gpt-4 models
 - `AzureChatOpenAI`: supports the Azure-hosted gpt-3.5 and gpt-4 models
 
-Note that HugginFace contains currently one provider `HFFlanT5` that gives access to the Flan Alpaca Large model.
+Note that the HugginFace provider example is available to help you customize it to the HugginFace-hosted model of your choice.
 
 ## Custom provider
 
