--- a/concepts/prompt-playground/template-and-variables.mdx
+++ b/concepts/prompt-playground/template-and-variables.mdx
@@ -22,7 +22,7 @@ The template view will only be displayed if the `template` property is set in yo
 
 ## Template format
 
-The template format is the [Python f-string format](https://docs.python.org/3/reference/lexical_analysis.html#f-strings).
+The template format is the [Python f-string format](https://docs.python.org/3/reference/lexical_analysis.html#f-strings). In the future we might support more template formats.
 
 This means variables are encapsulated by curly brackets like `{name}`. If you want curly brackets in your output like `"Hi {world}!"`, you should escape them by doubling them like so: `Hi {{world}}!`.
 
