prompt playground: fix import in code example

--- a/concepts/prompt-playground/llm-providers.mdx
+++ b/concepts/prompt-playground/llm-providers.mdx
@@ -36,7 +36,7 @@ from fastapi.responses import StreamingResponse
 
 from chainlit.input_widget import Select, Slider
 from chainlit.playground.provider import BaseProvider
-from chainlit.types import PromptMessage
+from chainlit.prompt import PromptMessage
 
 
 class ExampleProvider(BaseProvider):
