--- a/examples/openai-sql.mdx
+++ b/examples/openai-sql.mdx
@@ -29,22 +29,22 @@ openai.api_key = "YOUR_OPEN_AI_API_KEY"
 ## Define a prompt and LLM settings
 
 ````python app.py
-prompt = """SQL tables (and columns):
+template = """SQL tables (and columns):
 * Customers(customer_id, signup_date)
 * Streaming(customer_id, video_id, watch_date, watch_minutes)
 
 A well-written SQL query that {input}:
 ```"""
 
-model_name = "text-davinci-003"
 
 settings = {
+    "model": "gpt-3.5-turbo",
     "temperature": 0,
     "max_tokens": 500,
     "top_p": 1,
     "frequency_penalty": 0,
     "presence_penalty": 0,
-    "stop": ["```"]
+    "stop": ["```"],
 }
 ````
 
@@ -56,22 +56,38 @@ Then, we send back the answer to the UI with the [Message](/api-reference/messag
 ```python app.py
 @cl.on_message
 async def main(message: str):
-    fromatted_prompt = prompt.format(input=message)
+    # Create the prompt object for the Prompt Playground
+    prompt = Prompt(
+        provider=ChatOpenAI.id,
+        messages=[
+            PromptMessage(
+                role="user",
+                template=template,
+                formatted=template.format(input=message)
+            )
+        ],
+        settings=settings,
+        inputs={"input": message},
+    )
 
     # Prepare the message for streaming
     msg = cl.Message(
         content="",
         language="sql",
-        prompt=fromatted_prompt,
-        llm_settings=cl.LLMSettings(model_name=model_name, **settings),
     )
 
-    async for stream_resp in await openai.Completion.acreate(
-        model=model_name, prompt=fromatted_prompt, stream=True, **settings
+    # Call OpenAI
+    async for stream_resp in await openai.ChatCompletion.acreate(
+        messages=[m.to_openai() for m in prompt.messages], stream=True, **settings
     ):
-        token = stream_resp.get("choices")[0].get("text")
+        token = stream_resp.choices[0]["delta"].get("content", "")
         await msg.stream_token(token)
 
+    # Update the prompt object with the completion
+    prompt.completion = msg.content
+    msg.prompt = prompt
+
+    # Send and close the message stream
     await msg.send()
 ```
 
