--- a/concepts/prompt-playground/formatted-prompts.mdx
+++ b/concepts/prompt-playground/formatted-prompts.mdx
@@ -25,7 +25,7 @@ When you configure your prompt with only a formatted string, the "Template" view
 
 Skipping the definition of a template and its variables makes it easier to integrate, although the debugging interface will offer less features (no variable management or template view).
 
-![Formatted Prompt](/images/prompt-playground-formatted-prompt.png)
+![Formatted Prompt](/images/pp-formatted-prompt.png)
 
 Here is an example of code without the template/variables definitions:
 
@@ -35,40 +35,39 @@ import chainlit as cl
 from chainlit.prompt import Prompt, PromptMessage
 from chainlit.playground.providers import ChatOpenAI
 
+template = "Hello, {name}!"
+inputs = {"name": "John"}
+
+settings = {
+    "model": "gpt-3.5-turbo",
+    "temperature": 0,
+    # ... more settings
+}
+
 
 @cl.on_chat_start
 async def start():
-    # Prepare OpenAI call
-    template = "Hello, {name}!"
-    inputs = {"name": "John"}
-    formatted = template.format(**inputs)
-    role = "assistant"
-
-    settings = {
-        "model": "gpt-3.5-turbo",
-        "temperature": 0,
-        # ... more settings
-    }
-
-    # Make the call to OpenAI
-    response = await openai.ChatCompletion.acreate(
-        messages=[{"content": formatted, "role": role}], **settings
-    )
-
-    completion = response.choices[0]["message"]["content"]
-
-    # Create the Chainlit Prompt instance
+    # Create the Chainlit Prompt instance without template and inputs
     prompt = Prompt(
         provider=ChatOpenAI.id,
         settings=settings,
-        messages=[PromptMessage(formatted=formatted, role=role)],
-        completion=completion,
+        messages=[
+            PromptMessage(
+                formatted=template.format(**inputs),
+                role="assistant",
+            )
+        ],
     )
 
+    # Make the call to OpenAI
+    response = await openai.ChatCompletion.acreate(
+        messages=[m.to_openai() for m in prompt.messages], **settings
+    )
+
+    prompt.completion = response.choices[0]["message"]["content"]
+
     await cl.Message(
-        content=completion,
+        content=prompt.completion,
         prompt=prompt,
     ).send()
 ```
-
-In this case, the "Formatted prompt" view can be edited directly.
