--- a/concepts/prompt-playground/overview.mdx
+++ b/concepts/prompt-playground/overview.mdx
@@ -2,6 +2,10 @@
 title: Overview
 ---
 
+<Frame caption="Prompt Playground sneak peek">
+  <video controls autoplay loop src="/images/pp-overview.mp4" />
+</Frame>
+
 The Prompt Playground is a unique feature that allows developers to visualize, iterate, and version prompts, thereby enhancing the development/debugging process.
 
 Whether you're dealing with multi-step agents or trying to understand why a completion didn't turn out as expected, the Prompt Playground provides a clear view of the exact prompt sent to the LLM, including the template, variables, LLM settings, and provider. This feature not only helps in identifying issues but also allows you to modify the prompt or change the LLM settings or provider for better results.
@@ -28,11 +32,21 @@ This documentation will guide you through the various functionalities of the Pro
     Learn how to leverage template and variables to speed up your dev/debug
     cycle.
   </Card>
-  <Card title="Formatted Prompt" icon="message-lines" color="#16a34a" href="/concepts/prompt-playground/formatted-prompts">
+  <Card
+    title="Formatted Prompt"
+    icon="message-lines"
+    color="#16a34a"
+    href="/concepts/prompt-playground/formatted-prompts"
+  >
     Learn how to do a lighter integration while still speeding up your dev/debug
     cycle.
   </Card>
-  <Card title="LLM Providers" icon="microchip-ai" color="#dc2626" href="/concepts/prompt-playground/llm-providers">
+  <Card
+    title="LLM Providers"
+    icon="microchip-ai"
+    color="#dc2626"
+    href="/concepts/prompt-playground/llm-providers"
+  >
     Learn how to integrate with any LLM provider
   </Card>
 </CardGroup>
