--- a/concepts/prompt-playground/template-and-variables.mdx
+++ b/concepts/prompt-playground/template-and-variables.mdx
@@ -26,7 +26,7 @@ The template format is the [Python f-string format](https://docs.python.org/3/re
 
 This means variables are encapsulated by curly brackets like `{name}`. If you want curly brackets in your output like `"Hi {world}!"`, you should escape them by doubling them like so: `Hi {{world}}!`.
 
-## References
+## Highlighting
 
 When using a variable in your template, the variable will be highlighted to clarify that it will get replaced by the content of the variable in the formatted template.
 
@@ -38,16 +38,18 @@ One of the common use cases is to use the prompt playground to try different var
 
 Start with selecting the variable you want to edit.
 
-![Variable selection](/images/prompt-playground-variable-selection.png)
-
 Or simply click on the highlighted variable from the prompt template or formatted view.
 
-You can then edit the variable in the opened modal. Click on "Edit" to save the variable.
+You can then edit the variable in the opened modal. Click on "Save" to save the variable.
 
-![Variable modal](/images/prompt-playground-variable-modal.png)
+<Frame caption="Edit a variable in the Prompt Playground">
+  <img src="/images/edit-variable.gif" />
+</Frame>
 
 You can then click on "Submit" to get an updated completion.
 
 If you want to preview the full prompt with your updated variables, go to the formatted view. Note that you can edit variables either from the Template or Formatted views.
 
-![Formatted View](/images/prompt-playground-formatted-view.png)
+<Frame caption="Switch to the formatted view">
+  <img src="/images/pp-switch-view.gif" />
+</Frame>
