--- a/concepts/prompt-playground/llm-providers.mdx
+++ b/concepts/prompt-playground/llm-providers.mdx
@@ -20,6 +20,8 @@ Note that the HugginFace provider example is available to help you customize it 
 
 You can define your own provider to connect with your LLM provider of choice. Below is an example of how it would look like.
 
+### Step 1: Define the LLM Provider
+
 The `create_completion` method is required, it is where you should place the logic where you communicate with your LLM provider.
 
 The `format_message` and `message_to_string` function are encouraged. Defining them allows the provider to work with both defining prompts as one string or as a list of messages.
@@ -30,28 +32,39 @@ The `inputs` is a list of controls that this LLM provider offers that Chainlit w
 
 The `is_chat` property is a toggle to define whether you feed a list of messages to the LLM provider (like OpenAI's `gpt-4` model) or one text string (like Anthropic's `claude-2` model).
 
-
 ```python
 from fastapi.responses import StreamingResponse
 
 from chainlit.input_widget import Select, Slider
-from chainlit.playground.provider import BaseProvider
+from chainlit.playground.config import BaseProvider, add_llm_provider
 from chainlit.prompt import PromptMessage
 
 
 class ExampleProvider(BaseProvider):
-    def format_message(self, message: PromptMessage):
-        """Transforms a Prompt Message to a structure that a chat LLM can understand."""
+    def format_message(self, message, prompt):
+        """Optional method to transform a PromptMessage before sending it to the provider"""
+        message = super().format_message(message, prompt)
+        # Additional formatting...
         return message
-    
+
     def message_to_string(self, message: PromptMessage):
-        """Transforms a Prompt Message to a string that a non-chat LLM can understand."""
-        return message.formatted
+        """Optional method that transforms a Prompt Message to a string that a non-chat LLM can understand."""
+        return message.to_string()
 
     async def create_completion(self, request):
         await super().create_completion(request)
 
-        return StreamingResponse(content="completion content")
+        # Check the OpenAI provider for a streaming example
+        # https://github.com/Chainlit/chainlit/blob/main/src/chainlit/playground/providers/openai.py#L174
+
+        stream = ["This ", "is ", "the ", "test ", "completion"]
+
+        async def create_event_stream():
+            for token in stream:
+                await cl.sleep(0.1)
+                yield token
+
+        return StreamingResponse(create_event_stream())
 
 
 example_env_vars = {"api_key": "EXAMPLE_API_KEY"}
@@ -78,4 +91,12 @@ Example = ExampleProvider(
     ],
     is_chat=False,
 )
+```
+
+### Step 2: Register the LLM Provider:
+
+Once you have defined the provider, you need to tell Chainlit that it exists.
+
+```py
+add_llm_provider(ExampleProvider)
 ```
