--- a/api-reference/integrations/langchain.mdx
+++ b/api-reference/integrations/langchain.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Callback Handlers"
+title: "LangChain Callback Handler"
 ---
 
 When running your LangChain agent, it is essential to provide the appropriate callback handler. This ensures seamless communication between the Chainlit UI and your agent.
