--- a/api-reference/integrations/llamaindex.mdx
+++ b/api-reference/integrations/llamaindex.mdx
@@ -1,5 +1,5 @@
 ---
-title: "LlamaIndexCallbackHandler"
+title: "LlamaIndex Callback Handler"
 ---
 
 Callback Handler to enable Chainlit to display intermediate steps in the UI.
