--- a/cloud/persistence/local.mdx
+++ b/cloud/persistence/local.mdx
@@ -18,7 +18,7 @@ If authentication is not enabled, all chats will have author `LocalUser` and rol
 
 ## Enable
 
-To enable local persistence, update the database field in your [config](/cloud/config) file:
+To enable local persistence, update the database field in your config file `.chainlit/config.toml`:
 
 ```toml
 [project]
