--- a/concepts/prompt-playground/setup.mdx
+++ b/concepts/prompt-playground/setup.mdx
@@ -56,7 +56,7 @@ async def start():
     prompt.completion = response.choices[0]["message"]["content"]
 ```
 
-You can check the [Prompt API reference](/api-reference/prompt) to learn about all the attributes available.
+Check the [Prompt API reference](/api-reference/prompt) to learn about all the attributes and the difference between chat and non chat modes.
 
 <Note>
   Every attribute of the `Prompt` class is optional. The Prompt Playground
