add haystack integration card to the overview

--- a/overview.mdx
+++ b/overview.mdx
@@ -41,6 +41,9 @@ Chainlit is compatible with all Python programs and libraries. That being said, 
 >
   Learn how to integrate your Llama Index code with Chainlit.
 </Card>
+<Card title="Haystack Integration" icon="link" href="/integrations/haystack">
+  Learn how to integrate your Haystack code with Chainlit.
+</Card>
 
   <Card title="Langflow Integration" icon="link" href="/integrations/langflow">
     Learn how to integrate your Langflow agent with Chainlit.
