improvement/add init command

--- a/concepts/command-line.mdx
+++ b/concepts/command-line.mdx
@@ -6,6 +6,14 @@ The Chainlit CLI (Command Line Interface) is a tool that allows you to interact 
 
 ## Commands
 
+### `init`
+
+The `init` command initializes a Chainlit project by creating a configuration file located at `.chainlit/config.toml`
+
+```bash
+chainlit init
+```
+
 ### `run`
 
 The `run` command starts a Chainlit application. 
