more information the haystack integration

--- a/api-reference/integrations/haystack.mdx
+++ b/api-reference/integrations/haystack.mdx
@@ -54,4 +54,4 @@ The callback handler is responsible for listening to the chain's intermediate st
 Then, you can run `chainlit run app.py` in your terminal to run the app and interact with your agent.
 
 ## Example
-Check out this full example from the cookbook: https://github.com/Chainlit/cookbook/tree/main/haystack
+Check out this **full example** from the cookbook: https://github.com/Chainlit/cookbook/tree/main/haystack
