--- a/api-reference/integrations/haystack.mdx
+++ b/api-reference/integrations/haystack.mdx
@@ -2,23 +2,34 @@
 title: Haystack
 ---
 
-<Warning>
-  This integration is experimental.
-</Warning>
+<Note>
+  The current Haystack integration allows you to run chainlit apps and visualise intermediary steps. Playground capabilities will be added with the release of Haystack V2.
+</Note>
 
 
 Haystack is an end-to-end NLP framework that enables you to build NLP applications powered by LLMs, Transformer models, vector search and more. Whether you want to perform question answering, answer generation, semantic document search, or build tools that are capable of complex decision making and query resolution, you can use the state-of-the-art NLP models with Haystack to build end-to-end NLP applications solving your use case.
 Check out their repo: https://github.com/deepset-ai/haystack.
 
+<Frame caption="A Haystack agent run with reasoning steps">
+  <img src="/images/chainlit-haystack.png" />
+</Frame>
+## Installation
+
+```bash
+pip install farm-haystack chainlit
+```
+
 ## Integration
 
+Create a new Python file named app.py with the code below. This code adds the Chainlit callback handler to the Haystack callback manager. The callback handler is responsible for listening to the Agent’s intermediate steps and sending them to the UI.
 
 <CodeGroup>
 
-```python app.py
+```python Code Example
+from haystack.agents.conversational import ConversationalAgent
 import chainlit as cl
 
-## Some code
+## Agent Code
 
 agent = ConversationalAgent(
   prompt_node=conversational_agent_prompt_node,
@@ -27,10 +38,7 @@ agent = ConversationalAgent(
   tools=[search_tool],
 )
 
-# Adds the Chainlit Callback Handler to
-# the Haystack Agent callback manager
 cl.HaystackAgentCallbackHandler(agent)
-
 
 @cl.on_message
 async def main(message: str):
@@ -46,4 +54,4 @@ The callback handler is responsible for listening to the chain's intermediate st
 Then, you can run `chainlit run app.py` in your terminal to run the app and interact with your agent.
 
 ## Example
-Check out this **full example** from the cookbook: https://github.com/Chainlit/cookbook/tree/main/haystack
+Check out this full example from the cookbook: https://github.com/Chainlit/cookbook/tree/main/haystack
