--- a/api-reference/integrations/haystack.mdx
+++ b/api-reference/integrations/haystack.mdx
@@ -21,7 +21,7 @@ pip install farm-haystack chainlit
 
 ## Integration
 
-Create a new Python file named app.py with the code below. This code adds the Chainlit callback handler to the Haystack callback manager. The callback handler is responsible for listening to the Agent’s intermediate steps and sending them to the UI.
+Create a new Python file named app.py with the code below. 
 
 <CodeGroup>
 
