--- a/integrations/haystack.mdx
+++ b/integrations/haystack.mdx
@@ -3,7 +3,7 @@ title: Haystack
 ---
 
 <Note>
-  The current Haystack integration allows you to run chainlit apps and visualise intermediary steps. Playground capabilities will be added with the release of Haystack V2.
+  The current Haystack integration allows you to run chainlit apps and visualise intermediary steps. Playground capabilities will be added with the release of Haystack 2.0.
 </Note>
 
 
@@ -21,7 +21,7 @@ pip install farm-haystack chainlit
 
 ## Integration
 
-Create a new Python file named app.py with the code below. This code adds the Chainlit callback handler to the Haystack callback manager. The callback handler is responsible for listening to the Agent’s intermediate steps and sending them to the UI.
+Create a new Python file named app.py with the code below. 
 
 <CodeGroup>
 
