--- a/api-reference/integrations/haystack.mdx
+++ b/api-reference/integrations/haystack.mdx
@@ -3,7 +3,7 @@ title: Haystack
 ---
 
 <Note>
-  The current Haystack integration allows you to run chainlit apps and visualise intermediary steps. Playground capabilities will be added with the release of Haystack V2.
+  The current Haystack integration allows you to run chainlit apps and visualise intermediary steps. Playground capabilities will be added with the release of Haystack 2.0.
 </Note>
 
 
