update qa example

--- a/examples/qa.mdx
+++ b/examples/qa.mdx
@@ -91,7 +91,9 @@ async def on_chat_start():
 
     file = files[0]
 
-    msg = cl.Message(content=f"Processing `{file.name}`...")
+    msg = cl.Message(
+        content=f"Processing `{file.name}`...", disable_human_feedback=True
+    )
     await msg.send()
 
     # Decode the file
@@ -137,8 +139,7 @@ async def on_chat_start():
 @cl.on_message
 async def main(message):
     chain = cl.user_session.get("chain")  # type: ConversationalRetrievalChain
-    cb = cl.AsyncLangchainCallbackHandler(stream_final_answer=True)
-    cb.answer_reached = True
+    cb = cl.AsyncLangchainCallbackHandler()
 
     res = await chain.acall(message, callbacks=[cb])
     answer = res["answer"]
@@ -160,12 +161,7 @@ async def main(message):
         else:
             answer += "\nNo sources found"
 
-    if cb.has_streamed_final_answer:
-        cb.final_stream.content = answer
-        cb.final_stream.elements = text_elements
-        await cb.final_stream.update()
-    else:
-        await cl.Message(content=answer, elements=text_elements).send()
+    await cl.Message(content=answer, elements=text_elements).send()
 ```
 
 ## Try it out
