feature/add cloud documentation

--- a/cloud/persistence/overview.mdx
+++ b/cloud/persistence/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Getting Started
+title: Overview
 ---
 
 By default, your Chainlit app does not retain the chats and elements it generates. However, the ability to store and utilize this data can be a crucial part of your project or organization.
@@ -18,36 +18,14 @@ When data persistence is enabled, each message sent by your application will be 
 
 ## Conversation History
 
-Past conversations will be stored and made available in the 'history' tab. This feature allows you to navigate, apply filters, delete, or simply visualize previous chats.
+### Through Chainlit App
+
+Past conversations will be stored and made available in the 'history' tab. This feature allows you to navigate, apply filters, delete, or simply visualize **your** previous chats.
 
 <Frame caption="Conversation history">
   <img src="/images/history.gif" />
 </Frame>
 
-## Activating Data Persistence
+### Through Chainlit Cloud
 
-Learn how to activate each mode in the next sections.
-
-<CardGroup cols={2}>
-  <Card
-    title="Cloud Persistence"
-    icon="link"
-    href="/cloud/persistence/cloud"
-  >
-    Data will be saved on the Chainlit cloud.
-  </Card>
-  <Card
-    title="Local Persistence"
-    icon="link"
-    href="/cloud/persistence/local"
-  >
-    Data will be stored locally.
-  </Card>
-  <Card
-    title="Custom Persistence"
-    icon="link"
-    href="/cloud/persistence/custom"
-  >
-    Data will be stored in your own database and file system.
-  </Card>
-</CardGroup>
+As an admin, this feature allows you to access the history of past conversations through the Chainlit Cloud interface. Giving you the visibility over **all** project's conversations. 
