--- a/concepts/customization/custom-endpoint.mdx
+++ b/concepts/customization/custom-endpoint.mdx
@@ -1,5 +1,5 @@
 ---
-title: API endpoints
+title: API Endpoints
 ---
 
 Custom API endpoints allow you to extend Chainlit's Fast API backend with your own endpoints.
