--- a/concepts/customization/overview.mdx
+++ b/concepts/customization/overview.mdx
@@ -8,19 +8,35 @@ In this documentation we will go through the different options available.
 
 <CardGroup cols={2}>
   <Card
-    title="Custom Logo"
+    title="Custom Logo and Favicon"
     icon="image"
     color="#ea5a0c"
-    href="/concepts/customization/custom-logo"
+    href="/concepts/customization/custom-logo-and-favicon"
   >
     Learn how to display your own logo and favicon
   </Card>
   <Card
     title="Custom CSS"
-    icon="palette"
+    icon="paint-roller"
     color="#0285c7"
     href="/concepts/customization/custom-css"
   >
     Learn how to provide your own CSS stylesheet.
+  </Card>
+  <Card
+    title="Theme"
+    icon="palette"
+    color="#16a34a"
+    href="/concepts/customization/theme"
+  >
+    Learn about creating your own theme.
+  </Card>
+  <Card
+    title="API Endpoints"
+    icon="phone"
+    color="#dc2626"
+    href="/concepts/customization/theme"
+  >
+    Learn about customizing your API endpoints.
   </Card>
 </CardGroup>
