--- a/concepts/customization/custom-logo-and-favicon.mdx
+++ b/concepts/customization/custom-logo-and-favicon.mdx
@@ -6,7 +6,7 @@ You can customize the Chainlit application with your own logo and favicon.
 
 ## Use your Logo
 
-Chainlit Application offers support for both dark and light modes. To accommodate this, prepare two versions of your logo, named logo_dark and logo_light. Place these logos in a `/public` folder next to your application. Once you restart the application, your custom logos should be displayed accordingly.
+Chainlit Application offers support for both dark and light modes. To accommodate this, prepare two versions of your logo, named `logo_dark` and `logo_light`. Place these logos in a `/public` folder next to your application. Once you restart the application, your custom logos should be displayed accordingly.
 
 ## Use your Favicon
 
