--- a/concepts/customization/custom-logo-and-favicon.mdx
+++ b/concepts/customization/custom-logo-and-favicon.mdx
@@ -10,4 +10,4 @@ Chainlit Application offers support for both dark and light modes. To accommodat
 
 ## Use your Favicon
 
-To further enhance branding, you can also update the application's favicon. Place an image file named favicon in the `public` folder next to your application. After restarting the application, the new favicon will take effect.
+To further enhance branding, you can also update the application's favicon. Place an image file named `favicon` in the `public` folder next to your application. After restarting the application, the new favicon will take effect.
