--- a/api-reference/message.mdx
+++ b/api-reference/message.mdx
@@ -23,6 +23,9 @@ The `Message` class is designed to send, stream, edit or remove messages in the 
   The prompt used to generate the message. If provided, enables the prompt
   playground for this message.
 </ParamField>
+<ParamField path="disable_human_feedback" type="bool" optional>
+  Hide the feedback buttons for this specific message.
+</ParamField>
 <ParamField path="language" type="str" optional>
   Language of the code if the content is code. See
   https://react-code-blocks-rajinwonderland.vercel.app/?path=/story/codeblock--supported-languages
