--- a/authentication/overview.mdx
+++ b/authentication/overview.mdx
@@ -2,13 +2,11 @@
 title: Overview
 ---
 
-
 When you create a Chainlit app, you can choose to enable authentication. This will add a login page to your app. Only authenticated users will be able to access your app.
 
 The authentication system is flexible with callbacks. This enables you to adapt the authentication to your needs.
 
 Each Chainlit app has an independant authentication system. It has nothing to do with Chainlit cloud authentication.
-
 
 ## Configuration
 
@@ -21,5 +19,33 @@ The callbacks take an input that depends on the authentication method, and they 
 The callback can be sync or async, the annotation can handle either.
 
 <Warning>
-  Make sure each user has a unique username to prevent them from sharing their session.
+  Make sure each user has a unique username to prevent them from sharing their
+  session.
 </Warning>
+
+<CardGroup cols={2}>
+  <Card
+    title="Password Auth"
+    icon="shield"
+    color="#ea5a0c"
+    href="/authentication/password"
+  >
+    Authenticate users with login/password.
+  </Card>
+  <Card
+    title="OAuth"
+    icon="google"
+    color="#0285c7"
+    href="/authentication/oauth"
+  >
+    Authenticate users with your own OAuth app (like Google).
+  </Card>
+  <Card
+    title="Header"
+    icon="code"
+    color="#16a34a"
+    href="/authentication/header"
+  >
+    Authenticate users based on a custom header.
+  </Card>
+</CardGroup>
