--- a/authentication/password.mdx
+++ b/authentication/password.mdx
@@ -2,12 +2,13 @@
 title: Password
 ---
 
-This authentication allows you to plug your existing user database to the Chainlit app. You receive the username and password from the login form, and you need to return an `AppUser` object if the authentication is successful.
+The `@cl.password_auth_callback` receives the username and password from the login form. Returning an `AppUser` object will authenticate the user while returning `None` will fail the authentication.
 
-You can use the callback to make sure the user exists in your database and that the password is correct.
+You can verify the credentials against any service that you'd like (your own DB, a private google sheet etc.).
 
 <Warning>
-  You are responsible for hashing the user passwords before storing them in your database.
+  The usual security best practices applies here, hash password before storing
+  them.
 </Warning>
 
 ## Example
