add chainlit cloud password migration

--- a/guides/migration/0.7.0.mdx
+++ b/guides/migration/0.7.0.mdx
@@ -39,6 +39,13 @@ We understand that data privacy is a concern for companies, that's why we made C
 
 Check the [documentation](/cloud/persistence) to learn more about it.
 
+## Chainlit Cloud
+
+To facilitate the self hosting of [Chainlit Cloud](https://cloud.chainlit.io/), we had to drop third party vendors.
+If you used to sign in with OAuth, everything should work out of the box.
+
+If you used to sign in with password, click on `Forgot password?` and follow the process. You will be prompted to reset your password and verify your email.
+
 ## Removed APIs
 
 The following APIs have been **removed**:
