--- a/authentication/oauth.mdx
+++ b/authentication/oauth.mdx
@@ -7,7 +7,8 @@ This authentication allows you to plug a third-party OAuth provider to the Chain
 This callback enables you for example to restrict the OAuth login to specific email domains, or to specific users.
 
 <Note>
-  To active an OAuth provider, you need to define both the OAuth callback in your code and the provider(s) environment variables.
+  To active an OAuth provider, you need to define both the OAuth callback in
+  your code and the provider(s) environment variables.
 </Note>
 
 ## Providers
@@ -48,10 +49,9 @@ You need to set the following environment variables:
 - `OAUTH_AZURE_AD_CLIENT_SECRET`: Client secret
 - `OAUTH_AZURE_AD_TENANT_ID`: Azure tenant ID
 
-
 ## Examples
 
-Allow all users who passed the oauth authentication.
+### Allow all users who passed the oauth authentication.
 
 ```python
 from typing import Dict, Optional
@@ -69,7 +69,7 @@ def oauth_callback(
   return default_app_user
 ```
 
-Only allow users from a specific google domain.
+### Only allow users from a specific google domain.
 
 ```python
 from typing import Dict, Optional
@@ -90,7 +90,7 @@ def oauth_callback(
   return None
 ```
 
-Change the username to the email.
+### Change the username to the email.
 
 ```python
 from typing import Dict, Optional
