--- a/authentication/overview.mdx
+++ b/authentication/overview.mdx
@@ -23,6 +23,17 @@ The callback can be sync or async, the annotation can handle either.
   session.
 </Warning>
 
+## Get the current authenticated user
+
+You can access the current authenticated user through the [user_session](/concepts/user-session).
+
+```py
+@cl.on_chat_start
+async def on_chat_start():
+    app_user = cl.user_session.get("user")
+    await cl.Message(f"Hello {app_user.username}").send()
+```
+
 <CardGroup cols={2}>
   <Card
     title="Password Auth"
