--- a/authentication/password.mdx
+++ b/authentication/password.mdx
@@ -15,15 +15,14 @@ You can verify the credentials against any service that you'd like (your own DB,
 
 ```python
 from typing import Optional
-from chainlit.types import AppUser
 import chainlit as cl
 
 @cl.password_auth_callback
-def auth_callback(username: str, password: str) -> Optional[AppUser]:
+def auth_callback(username: str, password: str) -> Optional[cl.AppUser]:
   # Fetch the user matching username from your database
   # and compare the hashed password with the value stored in the database
   if (username, password) == ("admin", "admin"):
-    return AppUser(username="admin", role="ADMIN", provider="credentials")
+    return cl.AppUser(username="admin", role="ADMIN", provider="credentials")
   else:
     return None
 ```
