add auth0 oauth doc

--- a/authentication/oauth.mdx
+++ b/authentication/oauth.mdx
@@ -49,6 +49,18 @@ You need to set the following environment variables:
 - `OAUTH_AZURE_AD_CLIENT_SECRET`: Client secret
 - `OAUTH_AZURE_AD_TENANT_ID`: Azure tenant ID
 
+### Auth0
+
+Follow this guide to [create an Auth0 application](https://auth0.com/docs/get-started/auth0-overview/create-applications).
+
+The callback URL should be: `BASE_URL/auth/oauth/auth0/callback`. If your Chainlit app is hosted at localhost:8000, you should use `http://localhost:8000/auth/oauth/auth0/callback`.
+
+You need to set the following environment variables:
+
+- `OAUTH_AUTH0_CLIENT_ID`: Client ID
+- `OAUTH_AUTH0_CLIENT_SECRET`: Client secret
+- `OAUTH_AUTH0_DOMAIN`: Domain name for your auth0 setup
+
 ## Examples
 
 ### Allow all users who passed the oauth authentication.
