--- a/cloud/persistence/getting-started.mdx
+++ b/cloud/persistence/getting-started.mdx
@@ -8,12 +8,12 @@ Chainlit Cloud offers a swift and efficient solution for setting up data storage
 
 1. Navigate to [Chainlit Cloud](https://cloud.chainlit.io) and sign in.
 2. Click on the '+' icon to create a new project. You will see a screen similar to the one below:
-    ![Project Creation Screen](/images/project.png)
-3. Click on the 'Create API Key' button to create a new API key. 
+   ![Project Creation Screen](/images/project.png)
+3. Click on the 'Create API Key' button to create a new API key.
 4. We will need this key later on.
-    ![Project API Key](/images/apikey.png)
+   ![Project API Key](/images/apikey.png)
 
-## Activating Chainlit Cloud Mode
+## Activating Data Persistence
 
 After creating a Chainlit Project and an API key for said project. You will need to pass the key via a `CHAINLIT_API_KEY` environment variable.
 
@@ -25,12 +25,16 @@ CHAINLIT_API_KEY="your key"
 
 Or inlined:
 
-```shell 
+```shell
 CHAINLIT_API_KEY="your key" chainlit run main.py
 ```
 
 Once activated, your chats and elements will be persisted in Chainlit Cloud.
 
+## Chat history
+
+To enable chat history in your Chainlit app, you must setup data persistence AND [authentication](/authentication).
+
 ## Deactivation
 
-If you wish to deactivate Chainlit Cloud, simply comment out or remove the `CHAINLIT_API_KEY` environment variable.
+If you wish to deactivate data persistence, simply comment out or remove the `CHAINLIT_API_KEY` environment variable.
