--- a/cloud/deployment/overview.mdx
+++ b/cloud/deployment/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deployment
+title: Overview
 ---
 
 <Note>Coming soon! Contact us here for enterprise support https://forms.gle/uyKyZmmpVET95Wbx8 </Note>
