env variable memo

--- a/cloud/deployment.mdx
+++ b/cloud/deployment.mdx
@@ -138,3 +138,12 @@ OKTA_ISSUER="the issuer"
 # If you want to use Vercel Analytics (only for hosting with Vercel)
 ENABLE_VERCEL_ANALYTICS=true
 ```
+
+## Configure your Chainlit app
+
+Once you successfully deployed Chainlit Cloud, don't forget to set the following environment variables in your chainlit App.
+
+```bash
+CHAINLIT_SERVER=https://my-chainlit-cloud.com
+CHAINLIT_API_KEY=my project api key
+```
